@@ -1,3 +1,9 @@
+2011-08-22  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	Backport from trunk
+	PR fortran/50130
+	* gfortran.dg/zero_stride_1.f90:  New test.
+
 2011-08-20  Mikael Morin  <mikael.morin@sfr.fr>
 
 	PR fortran/50129
